--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <header class="menu" id="menu">
         Thanks, God
     </header>
+    <!--Второй экран-->
+    <div class="screen important-screen">
+        <div class="screen-box">
+            <article class="important-article">
+                <h1>Почему это важно?</h1>
+                <p></p>
+            </article>
+        </div>
+    </div>
 </div>
 <script>
     document.addEventListener('load', function (e) {
