--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <div class="screen-box">
             <div>
                 <h1>Правильная навигация на сайте</h1>
-                <h2>Автор: Павлихин Сергей</h2>
             </div>
         </div>
     </div>
@@ -24,15 +23,154 @@
     <header class="menu" id="menu">
         Thanks, God
     </header>
+    <!-- Хлебные крошки -->
+    <div class="breadcrumbs-box">
+        <ul class="breadcrumbs-list clearfix">
+            <li class="breadcrumb">
+                <a href="#">Главная</a>
+            </li>
+            <li class="breadcrumb">
+                <a href="#">Статьи</a>
+            </li>
+            <li class="breadcrumb">
+                <a href="#">Правильная навигация на сайте</a>
+            </li>
+        </ul>
+    </div>
     <!--Второй экран-->
     <div class="screen important-screen">
         <div class="screen-box">
             <article class="important-article">
                 <h1>Почему это важно?</h1>
-                <p></p>
+                <section class="flex-text-left-image text-justify">
+                    <div class="text-image-text text">
+                        <p> Правильная навигация на сайте — это то, что <strong>помогает пользователю
+                            не потеряться на сайте.</strong>
+                            Будь это многостраничный сайт или одностраничный, посетитель в любой момент времени должен понимать,
+                            где он находится и что вообще происходит. Этим самым у пользователя не будет возникать лишних вопросов и дискомфорт.
+                        </p>
+                        <p>
+                            Некоторые сайты имеют большую глубину и самый ужас начинается тогда, когда пользователь пришёл на сайт по ссылке,
+                            например, из гугла. Он может оказаться на главной странице, а может и на самой глубокой (7 кликов, для примера).
+                            Если в первом случае всё просто, то в втором - нет.
+                            Пользователь не должен думать о том: <strong>"Что это за сайт? Что тут ещё есть? Где я?".</strong>
+                            Ответы на все вопросы должна дать ему навигация.
+                            И для решения таких проблем существуют уже готовые подходы и стратегии.
+                        </p>
+                    </div>
+                    <div class="image-box bad-example">
+                        <img src="images/bad.jpg" alt="bad-example" class="image ">
+                        <span class="image-description">Плохой пример</span>
+                    </div>
+                </section>
             </article>
         </div>
     </div>
+    <!--/Второй экран-->
+    <div class="screen instruments-screen">
+        <div class="screen-box">
+            <article class="instruments-article">
+                <h1>Наши инструменты</h1>
+                <!--MAIN MENU -->
+                <h2>Главное меню</h2>
+                <section class="text-justify main-menu">
+                    <div class="text-image-text text">
+                        <p> <strong>Горизонтальное</strong> — это самое обыкновенное меню к которому мы все очень сильно привыкли.
+                            Обычно она располагается вверху страницы, и иногда в футере сайта.
+                            Данная навигация является очень распространённой и конечно же удобной,
+                            так как пользователь к ней привык и всегда знает где она находится. и дискомфорт.
+                        </p>
+                        <p>
+                            <strong>Вертикальное</strong> — этот вид навигации тоже очень популярен
+                            и как правило всегда располагается в боковых колонках сайта.
+                            Если на Вордпресс то в сайтбаре, слева или справа.
+                            Но есть и небольшой минус в таких меню, не получится сделать широкие сайт,
+                            которые позволяет делать горизонтальная навигация.
+                        </p>
+                    </div>
+                    <div class="images-box flex-images">
+                        <div class="image-box">
+                            <img src="images/ideal_menu.jpg" alt="bad-example" class="image ">
+                            <span class="image-description">Горизонтальное меню</span>
+                        </div>
+                        <div class="image-box">
+                            <img src="images/vertical_menu.jpg" alt="bad-example" class="image ">
+                            <span class="image-description">Вертикальное меню</span>
+                        </div>
+                    </div>
+                </section>
+                <!--BREADCRUMBS -->
+                <h2>Строка пути</h2>
+                <section class="text-justify ">
+                    <div class="text-image-text text">
+                        <p> Ну ещё называют <strong>&laquo;хлебные крошки&raquo;</strong>.
+                            Это не путь человека который он прошёл по сайту,
+                            скорее это путь до главной страницы или корневого раздела.
+                            Такая навигация нужна в тех случаях,
+                            когда до какой-либо информации путь занимает больше двух-трёх кликов.
+                            Особенно она полезна,
+                            когда внутреннее меню сайта отсутствует или не позволяет перейти на раздел выше.
+                        </p>
+                    </div>
+                    <div class="images-box flex-images">
+                        <div class="image-box">
+                            <img src="images/breadcrumbs-example.jpg" alt="bad-example" class="image ">
+                            <span class="image-description">Идеальный сайт с хлебными крошками</span>
+                        </div>
+                    </div>
+                </section>
+                <!-- SEARCH FORM -->
+                <h2>Форма поиска</h2>
+                <section class="text-justify ">
+                    <div class="text-image-text text">
+                        <p> Для крупных сайтов, где просто физически невозможно уместить
+                            все наименования разделов в меню, лучше всего добавить
+                            поисковую форму. При этом есть возможность установить
+                            специальный поисковый скрипт, либо занести на свой сайт поиск,
+                            любезно предоставленный поисковой системой
+                            (например, Яндекс или Google).
+                        </p>
+                    </div>
+                    <div class="images-box flex-images">
+                        <div class="image-box">
+                            <img src="images/search_form.jpg" alt="bad-example" class="image ">
+                            <span class="image-description">Форма поиска</span>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </div>
+    </div>
+    <!-- DETAILS -->
+    <div class="screen details-screen">
+        <div class="screen-box">
+            <article class="details-article text">
+                <h1>Разные мелочи</h1>
+                <p><strong>Ссылка на главную страницу в логотипе</strong> — Огромное количество пользователей привыкло к тому,
+                    что если нажать на логотип сайта, то это
+                    перенесёт на главный страницу. Лучше продолжать эту тенденцию</p>
+                <p><strong>Кнопка вверх</strong> — Это скорее навигация страницы, но всё же.
+                    Помогает пользователю быстро вернуться вверх странички,
+                    если страница очень длинная
+                </p>
+                <p><strong>Меню в футере</strong> — Удобно, если страница длинная.
+                    Пользователь прокрутил вниз и хочет сразу перейти в
+                    другой раздел. Ему не придётся листать сайт вверх
+                    и нажимать кнопку «вверх»
+                </p>
+            </article>
+        </div>
+    </div>
+    <div class="screen slogan-screen">
+        <div class="screen-box">
+            <div>
+                <h1>Пишите сайты правильно</h1>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <a href="https://vk.com/sergey.pavlikhin" target="_blank">Автор: Павлихин Сергей</a>
+    </footer>
 </div>
 <script>
     document.addEventListener('scroll', function (e) {
