--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
     </div>
     <!--Меню-->
     <header class="menu" id="menu">
-        Thanks, God
+        <div class="screen-box menu-box clearfix">
+            <div class="logo">
+                <a href="#"><img src="images/logo.png"></a>
+            </div>
+            <nav class="nav-box">
+                <div class="nav-link-holder"><a href="#">Свежее</a></div>
+                <div class="nav-link-holder active"><a href="#">Статьи</a></div>
+                <div class="nav-link-holder"><a href="#">Видео</a></div>
+                <div class="nav-link-holder"><a href="#">О портале</a></div>
+            </nav>
+        </div>
     </header>
     <!-- Хлебные крошки -->
     <div class="breadcrumbs-box">
