--- a/index.html
+++ b/index.html
@@ -12,27 +12,25 @@
 <!-- Основной контейнер -->
 <div class="container">
     <!--Первый экран-->
-    <div class="screen hello-screen" id="hello-screen">
+    <header class="screen hello-screen" id="hello-screen">
         <div class="screen-box">
-            <div>
-                <h1>Правильная навигация на сайте</h1>
-            </div>
+            <h1>Правильная навигация на сайте</h1>
         </div>
-    </div>
+    </header>
     <!--Меню-->
-    <header class="menu" id="menu">
+    <div class="menu" id="menu">
         <div class="screen-box menu-box clearfix">
             <div class="logo">
                 <a href="#"><img src="images/logo.png"></a>
             </div>
-            <nav class="nav-box">
+            <div class="nav-box">
                 <div class="nav-link-holder"><a href="#">Свежее</a></div>
                 <div class="nav-link-holder active"><a href="#">Статьи</a></div>
                 <div class="nav-link-holder"><a href="#">Видео</a></div>
                 <div class="nav-link-holder"><a href="#">О портале</a></div>
-            </nav>
+            </div>
         </div>
-    </header>
+    </div>
     <!-- Хлебные крошки -->
     <div class="breadcrumbs-box">
         <ul class="breadcrumbs-list clearfix">
@@ -50,9 +48,9 @@
     <!--Второй экран-->
     <div class="screen important-screen">
         <div class="screen-box">
-            <article class="important-article">
+            <div class="important-article">
                 <h1>Почему это важно?</h1>
-                <section class="flex-text-left-image text-justify">
+                <div class="flex-text-left-image text-justify">
                     <div class="text-image-text text">
                         <p> Правильная навигация на сайте — это то, что <strong>помогает пользователю
                             не потеряться на сайте.</strong>
@@ -72,8 +70,8 @@
                         <img src="images/bad.jpg" alt="bad-example" class="image ">
                         <span class="image-description">Плохой пример</span>
                     </div>
-                </section>
-            </article>
+                </div>
+            </div>
         </div>
     </div>
     <!--/Второй экран-->
@@ -83,7 +81,7 @@
                 <h1>Наши инструменты</h1>
                 <!--MAIN MENU -->
                 <h2>Главное меню</h2>
-                <section class="text-justify main-menu">
+                <div class="text-justify main-menu">
                     <div class="text-image-text text">
                         <p> <strong>Горизонтальное</strong> — это самое обыкновенное меню к которому мы все очень сильно привыкли.
                             Обычно она располагается вверху страницы, и иногда в футере сайта.
@@ -108,10 +106,10 @@
                             <span class="image-description">Вертикальное меню</span>
                         </div>
                     </div>
-                </section>
+                </div>
                 <!--BREADCRUMBS -->
                 <h2>Строка пути</h2>
-                <section class="text-justify ">
+                <div class="text-justify ">
                     <div class="text-image-text text">
                         <p> Ну ещё называют <strong>&laquo;хлебные крошки&raquo;</strong>.
                             Это не путь человека который он прошёл по сайту,
@@ -128,10 +126,10 @@
                             <span class="image-description">Идеальный сайт с хлебными крошками</span>
                         </div>
                     </div>
-                </section>
+                </div>
                 <!-- SEARCH FORM -->
                 <h2>Форма поиска</h2>
-                <section class="text-justify ">
+                <div class="text-justify ">
                     <div class="text-image-text text">
                         <p> Для крупных сайтов, где просто физически невозможно уместить
                             все наименования разделов в меню, лучше всего добавить
@@ -147,7 +145,7 @@
                             <span class="image-description">Форма поиска</span>
                         </div>
                     </div>
-                </section>
+                </div>
             </article>
         </div>
     </div>
