--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <!--/Второй экран-->
+    <!-- НАШИ ИНСТРУМЕНТЫ -->
     <div class="screen instruments-screen">
         <div class="screen-box">
             <article class="instruments-article">
